--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "22.7.9",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
+    "@types/jest": "^30.0.0",
+    "@types/node": "24.10.0",
     "aws-cdk": "2.1031.2",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.9.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.215.0",
-    "constructs": "^10.0.0"
+    "@aws-cdk/aws-lambda-python-alpha": "^2.223.0-alpha.0",
+    "aws-cdk-lib": "2.223.0",
+    "constructs": "^10.4.3"
   }
 }
